--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		<div class="loader_inner"></div>
 	</div>
 
-	<header class="main_head main_color_bg" data-parallax="scroll" data-image-src="img/bg4.jpg" data-z-index="1">
+	<header class="main_head main_color_bg" data-parallax="scroll" data-image-src="img/bg.jpg" data-z-index="1">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12">
