--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
 									<button class="mfp-close" type="button" title="Закрыть (Esc)">×</button>
 									<h3>Instudy</h3>
 									<p>Instudy является официальным представителем мировых авторских программ развития детей в Кыргызстане.</p>
-									<a href="https://instudy.info" target="_blank">Перейти на сайт</a>
+									<a href="http://instudy.info" target="_blank">Перейти на сайт</a>
 									<img src="img/portfolio-images/instudy.jpg" alt="Alt" />
 								</div>
 							</div>
