--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
 									<button class="mfp-close" type="button" title="Закрыть (Esc)">×</button>
 									<h3>Shop.beeline</h3>
 									<p>Интернет-магазин – это сайт, который торгует товарами в интернете. Интернет-магазин дает пользователям возможность сформировать заказ, выбрать удобный способ оплаты и доставки заказа. Интернет-магазины могут быть специализированными (продавать только конкретный тип товаров или услуг) или  универсальными.</p>
-									<a href="https://shop.beeline.kg" target="_blank">Перейти на сайт</a>
+									<a href="http://shop.beeline.kg" target="_blank">Перейти на сайт</a>
 									<img src="img/portfolio-images/beeline.jpg" alt="Alt" />
 								</div>
 							</div>
@@ -220,7 +220,7 @@
 									<button class="mfp-close" type="button" title="Закрыть (Esc)">×</button>
 									<h3>Kupislona</h3>
 									<p>Интернет магазин женских и мужских аксессуаров в Алмате</p>
-									<a href="https://kupi-slona.kz" target="_blank">Перейти на сайт</a>
+									<a href="http://kupi-slona.kz" target="_blank">Перейти на сайт</a>
 									<img src="img/portfolio-images/kupi.jpg" alt="Alt" />
 								</div>
 							</div>
@@ -239,7 +239,7 @@
 									<button class="mfp-close" type="button" title="Закрыть (Esc)">×</button>
 									<h3>Megadom</h3>
 									<p>1-ый	интернет-магазин строительных материалов в Кыргызстане.</p>
-									<a href="https://megadom.kg" target="_blank">Перейти на сайт</a>
+									<a href="http://megadom.kg" target="_blank">Перейти на сайт</a>
 									<img src="img/portfolio-images/mega.jpg" alt="Alt" />
 								</div>
 							</div>
@@ -258,7 +258,7 @@
 									<button class="mfp-close" type="button" title="Закрыть (Esc)">×</button>
 									<h3>Cashback7</h3>
 									<p>Cashback-сайты заключают с магазинами партнерские соглашения, по которым магазин выплачивает сайту некий процент от совершенной покупки за привлечение нового покупателя. Ну а cashback-сайт в свою очередь возвращает часть этих денег непосредственно покупателю. Единственное условия для работы этой схемы - это то, что покупатель должен зайти в интернет-магазин не по прямой ссылке, а по партнерской ссылке, которая размещена на cashback-сайте. Естественно покупателю необходимо предварительно зарегистрироваться в системе.</p>
-									<a href="https://cashback7.ru" target="_blank">Перейти на сайт</a>
+									<a href="http://cashback7.ru" target="_blank">Перейти на сайт</a>
 									<img src="img/portfolio-images/cash.jpg" alt="Alt" />
 								</div>
 							</div>
@@ -277,7 +277,7 @@
 									<button class="mfp-close" type="button" title="Закрыть (Esc)">×</button>
 									<h3>Clinic</h3>
 									<p>Клиника профессора Асымбековой - прием женщин и детей по неотложным состояниям - круглосуточно, в том числе в выходные и праздничные дни</p>
-									<a href="https://clinic.kg" target="_blank">Перейти на сайт</a>
+									<a href="http://clinic.kg" target="_blank">Перейти на сайт</a>
 									<img src="img/portfolio-images/clinic.jpg" alt="Alt" />
 								</div>
 							</div>
@@ -315,7 +315,7 @@
 									<button class="mfp-close" type="button" title="Закрыть (Esc)">×</button>
 									<h3>Krono</h3>
 									<p>Фирменный магазин Кроно предлагает вам широкий выбор строительных материалов и мебели по оптовым ценам.</p>
-									<a href="https://krono.kg" target="_blank">Перейти на сайт</a>
+									<a href="http://krono.kg" target="_blank">Перейти на сайт</a>
 									<img src="img/portfolio-images/krono.jpg" alt="Alt" />
 								</div>
 							</div>
@@ -334,7 +334,7 @@
 									<button class="mfp-close" type="button" title="Закрыть (Esc)">×</button>
 									<h3>Royaldentplus</h3>
 									<p>Клиника создана специалистами высокой квалификации, которые любят и знают свою профессию.</p>
-									<a href="https://royaldentplus.ru" target="_blank">Перейти на сайт</a>
+									<a href="http://royaldentplus.ru" target="_blank">Перейти на сайт</a>
 									<img src="img/portfolio-images/royal.jpg" alt="Alt" />
 								</div>
 							</div>
@@ -354,7 +354,7 @@
 									<button class="mfp-close" type="button" title="Закрыть (Esc)">×</button>
 									<h3>Skinclinic</h3>
 									<p>Корейская косметологическая клиника в Бишкеке. Корейская клиника в Бишкеке</p>
-									<a href="https://skinclinic.kg" target="_blank">Перейти на сайт</a>
+									<a href="http://skinclinic.kg" target="_blank">Перейти на сайт</a>
 									<img src="img/portfolio-images/skin.jpg" alt="Alt" />
 								</div>
 							</div>
@@ -374,7 +374,7 @@
 									<button class="mfp-close" type="button" title="Закрыть (Esc)">×</button>
 									<h3>Optimatrans</h3>
 									<p>Оптима Транс - грузоперевозки Бишкек, перевозки в Киргизию, доставка грузов Бишкек, служба доставки Бишкек, переезд Бишкек, транспортные услуги Бишкек.</p>
-									<a href="https://optimatrans.kg" target="_blank">Перейти на сайт</a>
+									<a href="http://optimatrans.kg" target="_blank">Перейти на сайт</a>
 									<img src="img/portfolio-images/optima.jpg" alt="Alt" />
 								</div>
 							</div>
@@ -394,7 +394,7 @@
 									<button class="mfp-close" type="button" title="Закрыть (Esc)">×</button>
 									<h3>Simpladent</h3>
 									<p>В стоматологической клинике «Simpladent» высококвалифицированные специалисты готовы вернуть вашей улыбке здоровый вид и красоту!</p>
-									<a href="https://simpladent.kg" target="_blank">Перейти на сайт</a>
+									<a href="http://simpladent.kg" target="_blank">Перейти на сайт</a>
 									<img src="img/portfolio-images/simpl.jpg" alt="Alt" />
 								</div>
 							</div>
@@ -414,7 +414,7 @@
 									<button class="mfp-close" type="button" title="Закрыть (Esc)">×</button>
 									<h3>Versal</h3>
 									<p>Одной из основополагающих деталей в интерьере, которая создает уют и законченный образ комнаты, являются красивые, правильно подобранные шторы. Поэтому, если Вы ищете салон, в котором мастера знают и могут создать эксклюзивное «обрамление» для Ваших окон, то салон штор «Версаль» — именно то, что нужно!</p>
-									<a href="https://versal.kg" target="_blank">Перейти на сайт</a>
+									<a href="http://versal.kg" target="_blank">Перейти на сайт</a>
 									<img src="img/portfolio-images/versal.jpg" alt="Alt" />
 								</div>
 							</div>
@@ -434,7 +434,7 @@
 									<button class="mfp-close" type="button" title="Закрыть (Esc)">×</button>
 									<h3>La</h3>
 									<p>Магазин бижутерии аксессуаров и украшений</p>
-									<a href="https://la.kg" target="_blank">Перейти на сайт</a>
+									<a href="http://la.kg" target="_blank">Перейти на сайт</a>
 									<img src="img/portfolio-images/la1.png" alt="Alt" />
 								</div>
 							</div>
@@ -454,7 +454,7 @@
 									<button class="mfp-close" type="button" title="Закрыть (Esc)">×</button>
 									<h3>Stomdenta</h3>
 									<p>Стоматологическая клиника "СтомДента" начала свою работу в мае 2013 года. Коллектив клиники - это дружная команда профессионалов нацеленных на обеспечение людей качественным и доступным лечением. </p>
-									<a href="https://stomdenta.kg" target="_blank">Перейти на сайт</a>
+									<a href="http://stomdenta.kg" target="_blank">Перейти на сайт</a>
 									<img src="img/portfolio-images/stom1.jpg" alt="Alt" />
 								</div>
 							</div>
@@ -474,7 +474,7 @@
 									<button class="mfp-close" type="button" title="Закрыть (Esc)">×</button>
 									<h3>Happy-day</h3>
 									<p>Соки и детокс-программы Happy Day — это уникальные функциональные продукты для здорового питания</p>
-									<a href="https://happy-day.kg" target="_blank">Перейти на сайт</a>
+									<a href="http://happy-day.kg" target="_blank">Перейти на сайт</a>
 									<img src="img/portfolio-images/happy1.jpg" alt="Alt" />
 								</div>
 							</div>
@@ -495,7 +495,7 @@
 									<button class="mfp-close" type="button" title="Закрыть (Esc)">×</button>
 									<h3>Happy-day</h3>
 									<p>СДОУ “Шаг за шагом” на рынке образовательных услуг уже 5 лет.Детский сад “Шаг за шагом” приобрел огромный опыт и будет преобразовываться в новое помещение со всеми нормативами Сан.Пина, для полного самовыражения детей и удовлетворения родителей.</p>
-									<a href="https://shagzashagom.kg/new" target="_blank">Перейти на сайт</a>
+									<a href="http://shagzashagom.kg/new" target="_blank">Перейти на сайт</a>
 									<img src="img/portfolio-images/shag1.png" alt="Alt" />
 								</div>
 							</div>
@@ -515,7 +515,7 @@
 									<button class="mfp-close" type="button" title="Закрыть (Esc)">×</button>
 									<h3>Filos</h3>
 									<p>Хорошие языковые курсы не только гарантируют быстрые успехи учащихся, но и разбудят их любопытство, привьют мотивацию и обеспечат энтузиазмом. Мы подберем для вас языковые курсы, которые помогут достичь поставленных целей в комфортном темпе.</p>
-									<a href="https://filos.kg" target="_blank">Перейти на сайт</a>
+									<a href="http://filos.kg" target="_blank">Перейти на сайт</a>
 									<img src="img/portfolio-images/filos1.png" alt="Alt" />
 								</div>
 							</div>
@@ -535,7 +535,7 @@
 									<button class="mfp-close" type="button" title="Закрыть (Esc)">×</button>
 									<h3>Snmix</h3>
 									<p>Компания занимается разработкой сайтов, логотипов, продвижением сайтов, контекстной рекламой</p>
-									<a href="https://snmix.com" target="_blank">Перейти на сайт</a>
+									<a href="http://snmix.com" target="_blank">Перейти на сайт</a>
 									<img src="img/portfolio-images/snmix1.png" alt="Alt" />
 								</div>
 							</div>
@@ -555,7 +555,7 @@
 									<button class="mfp-close" type="button" title="Закрыть (Esc)">×</button>
 									<h3>Amfi</h3>
 									<p>АМФО координирует вопросы взаимодействия членов с государственными органами ,в особенности с Национальным Банком Кыргызской, который регулирует сектор финансовых услуг, предоставляет возможность коллегам выработать совместные решения задач обеспечивает обмен информации.</p>
-									<a href="https://amfi.kg" target="_blank">Перейти на сайт</a>
+									<a href="http://amfi.kg" target="_blank">Перейти на сайт</a>
 									<img src="img/portfolio-images/amfi1.png" alt="Alt" />
 								</div>
 							</div>
@@ -576,7 +576,7 @@
 									<button class="mfp-close" type="button" title="Закрыть (Esc)">×</button>
 									<h3>Online-kg</h3>
 									<p>Сайт кыргызских, казахских и узбекских кинофильмов</p>
-									<a href="https://online-kino.kg" target="_blank">Перейти на сайт</a>
+									<a href="http://online-kino.kg" target="_blank">Перейти на сайт</a>
 									<img src="img/portfolio-images/online-kino1.png" alt="Alt" />
 								</div>
 							</div>
@@ -596,7 +596,7 @@
 									<button class="mfp-close" type="button" title="Закрыть (Esc)">×</button>
 									<h3>МПА</h3>
 									<p>На сегодняшний день Фирма МПА - одна из ведущих компаний в области поставок и реализации ГСМ, имеющая филиалы и АЗС в регионах Кыргызской Республики, и партнеров за ее пределами. </p>
-									<a href="https://mpa.kg" target="_blank">Перейти на сайт</a>
+									<a href="http://mpa.kg" target="_blank">Перейти на сайт</a>
 									<img src="img/portfolio-images/mpa1.png" alt="Alt" />
 								</div>
 							</div>
@@ -635,7 +635,7 @@
 									<button class="mfp-close" type="button" title="Закрыть (Esc)">×</button>
 									<h3>МФО-ШУ</h3>
 									<p>МФО «ШУ» является сельско-ориентированной организацией, выдает кредиты на развитие малого и среднего бизнеса, преимущественно на разведение мелкого и крупного скота.</p>
-									<a href="https://mfo-shu.kz" target="_blank">Перейти на сайт</a>
+									<a href="http://mfo-shu.kz" target="_blank">Перейти на сайт</a>
 									<img src="img/portfolio-images/mfu1.png" alt="Alt" />
 								</div>
 							</div>
@@ -655,7 +655,7 @@
 									<button class="mfp-close" type="button" title="Закрыть (Esc)">×</button>
 									<h3>AsiaTravel</h3>
 									<p>Компания занимается трудоустройством людей в странах Ближнего Востока, в Турции, в Канаде.</p>
-									<a href="https://asiatravel.kg" target="_blank">Перейти на сайт</a>
+									<a href="http://asiatravel.kg" target="_blank">Перейти на сайт</a>
 									<img src="img/portfolio-images/asia1.png" alt="Alt" />
 								</div>
 							</div>
@@ -675,7 +675,7 @@
 									<button class="mfp-close" type="button" title="Закрыть (Esc)">×</button>
 									<h3>StarInvest</h3>
 									<p>Компания занимается трудоустройством людей в странах Ближнего Востока, в Турции, в Канаде.</p>
-									<a href="https://starinvest.kg" target="_blank">Перейти на сайт</a>
+									<a href="http://starinvest.kg" target="_blank">Перейти на сайт</a>
 									<img src="img/portfolio-images/star1.png" alt="Alt" />
 								</div>
 							</div>
