--- a/index.html
+++ b/index.html
@@ -705,7 +705,7 @@
 					<div class="contact_box">
 						<div class="contacts_icon icon-basic-geolocalize-05"></div>
 						<h3>Адрес:</h3>
-						<p>Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне.</p>
+						<p>Кыргызстан г.Бишкек</p>
 					</div>
 					<div class="contact_box">
 						<div class="contacts_icon icon-basic-smartphone"></div>
