--- a/index.html
+++ b/index.html
@@ -815,7 +815,7 @@
 							<textarea name="message" placeholder="Ваше сообщение" data-validation-required-message="Вы не ввели сообщение" required></textarea>
 							<span class="help-block text-danger"></span>
 						</label>
-						<button class="send">Отправить</button>
+						<button class="send" onclick="yaCounter36333919.reachGoal('footer'); return true;">Отправить</button>
 					</form>
 				</div>
 			</div>
@@ -863,7 +863,7 @@
 			
 
 			<div class="text-center">
-				<button class="send">Отправить</button>
+				<button class="send" onclick="yaCounter36333916.reachGoal('сall'); return true;">Отправить</button>
 			</div>
 
 		</form>
