--- a/salimal/index.html
+++ b/salimal/index.html
@@ -5,7 +5,7 @@
 
 	<meta charset="utf-8">
 
-	<title>Title</title>
+	<title>Salimal</title>
 	<meta name="description" content="">
 
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -29,23 +29,29 @@
 </head>
 
 <body>
+
+	<div class="soc-icons">
+		<ul>
+			<li><a href="#" target="_blank"><img src="img/facebook.svg" alt=""></a></li>
+			<li><a href="#" target="_blank"><img src="img/instagram.svg" alt=""></a></li>
+			<li><a href="#" target="_blank"><img src="img/diesel.jpg" alt=""></i></a></li>
+			<li><a href="#" target="_blank"><img class="lalafo" src="img/lalafo.png" alt=""></a></li>
+		</ul>
+	</div>
+
 	<header>
 		<div class="container">
 			<div class="row df">
-				<div class="col-sm-4 logo">
+				<div class="col-sm-5 logo">
 					<img src="img/logo.png" class="img-responsive" alt="">
+					<p>Мы воплощаем наши мечты!</p>
 				</div>
-				<div class="col-sm-4 soc">
+				
+				<div class="col-sm-7 conts">
 					<ul>
-						<li><a href="#" target="_blank"><img src="img/facebook.svg" alt=""></a></li>
-						<li><a href="#" target="_blank"><img src="img/instagram.svg" alt=""></a></li>
-						<li><a href="#" target="_blank"><img src="img/diesel.jpg" alt=""></i></a></li>
-						<li><a href="#" target="_blank"><img class="lalafo" src="img/lalafo.png" alt=""></a></li>
-					</ul>
-				</div>
-				<div class="col-sm-4 conts">
-					<ul>
-						<li><i class="fa fa-phone"></i>0777 00 11 22</li>
+						<li><i class="fa fa-phone"></i>0312 66 02 08</li>
+						<li><i class="fa fa-phone"></i>0771 63 67 10</li>
+						<li><i class="fa fa-phone"></i>0552 06 01 68</li>
 						<li><i class="fa fa-envelope"></i>info@salimal.kg</li>
 					</ul>
 					
@@ -65,17 +71,24 @@
 							<span class="icon-bar"></span>
 							<span class="icon-bar"></span>
 						</button>
-						<a class="logo" href="/" rel="nofollow"><img class="img-responsive" src="/assets/images/logo.png" alt="Альпикон - промышленные альпинисты"></a>
+						<a class="logo" href="/" rel="nofollow"><img class="img-responsive" src="/assets/images/logo.png" alt="Logo"></a>
 					</div>
 					<div class="collapse navbar-collapse" id="navbar-collapse">
 						<ul class="nav navbar-nav">
-							<li class="active"><a href="/">Главная</a></li>
-							<li><a href="#about">О компании</a></li>
-							<li><a href="#">Услуги</a></li>
-							<li><a href="#">Наши работы</a></li>
-							<li><a href="#">Галерея</a></li>
-							<li><a href="#">Отзывы</a></li>
-							<li><a href="#contacts">Контакты</a></li>
+							<li><a href="/">Главная</a></li>
+							<li><a href="about.html">О компании</a></li>
+							<li class="dropdown">
+					          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Услуги<span class="caret"></span></a>
+					          <ul class="dropdown-menu">
+					            <li><a href="fasad.html">Фасадные работы</a></li>
+					            <li><a href="krovel.html">Кровельные работы</a></li>
+					            <li><a href="montaj.html">Монтажные работы</a></li>
+					            <li><a href="klining.html">Клининговые работы</a></li>
+					            <li><a href="otdel.html">Отделочные работы</a></li>
+					            <li><a href="svarka.html">Сварочные работы</a></li>  
+					          </ul>
+					        </li>
+							<li><a href="works.html">Наши работы</a></li>
 						</ul>                    
 					</div>
 				</div>
@@ -97,28 +110,29 @@
 	  <!-- Wrapper for slides -->
 	  <div class="carousel-inner">
 		<div class="item active">
-		  <img src="img/slide1.jpg" alt="Slide">
+		  <img src="img/slider.png" alt="Slide">
 		  <div class="overlay"></div>
 		  <div class="carousel-caption">
-		  	<h2>Наша команда</h2>
+		  	<h2>Фасадные работы</h2>
 		  </div>
 		</div>
 
 		<div class="item">
-		  <img src="img/slide2.jpg" alt="Slide">
+		  <img src="img/slider2.png" alt="Slide">
 		  <div class="overlay"></div>
 		  <div class="carousel-caption">
-		  	<h2>Сварочные работы</h2>
+		  	<h2>Клининговые работы</h2>
 		  </div>
 		</div>
 
 		<div class="item">
-		  <img src="img/slide3.jpg" alt="Slide">
+		  <img src="img/slider3.png" alt="Slide">
 		  <div class="overlay"></div>
 		  <div class="carousel-caption">
-		  	<h2>Наша команда</h2>
+		  	<h2>Монтажные работы</h2>
 		  </div>
 		</div>
+
 	  </div>
 
 	  <!-- Left and right controls -->
@@ -132,17 +146,7 @@
 	  </a>
 	</div>
 	
-	<section id="about" class="about">
-		<div class="container">
-			<div class="row">
-				<div class="col-md-12">
-					<h2>О Компании</h2>
-					<p>ОсОО"Салимал" выполняет высотные работы и работы в области промышленного альпинизма - ремонт, отделку, покраску фасадов, герметизацию швов, покраска металлоконструкций, высотные монтажные работы, клининговые работы, ремонт и очистку кровель, труб и прочие высотные работы с привлечением промышленных альпинистов.. Выполнение высотных работ при помощи промышленного альпинизма - классический пример инновации в строительной индустрии, и является востребованной услугой, как у отечественных, так и зарубежных строительных фирм. Предоставление услуг, которые выполняют промышленные альпинисты, требует многолетнего опыта и серьезной подготовки персонала компании. </p>
-					<p>ОсОО «Салимал» имеет <b>Лицензию  серии КРЦ – 2 № 07113 от 13 октября 2016 года на выполнение строительно-монтажных работ на объектах 3 уровня ответственности.</b></p>
-				</div>
-			</div>
-		</div>
-	</section>
+	
 
 	<section class="service" id="service">
 		<div class="container">
@@ -175,8 +179,7 @@
 									<span class="service-popup-text">
 										<span class="row">
 											<span class="col-md-12">
-												Ремонт покраска фасадов ,  покраска металлоконструкций здания, утепление фасадов домов, балкона , декор, штукатурка, сайдинг,  ремонт герметизация меж панельных стыков.
-
+												<p>Ремонт покраска фасадов, покраска металлоконструкций здания, утепление фасадов домов, балкона, декор, штукатурка, сайдинг, ремонт герметизация меж панельных стыков.</p>
 											</span>
 										</span>
 									</span>
@@ -209,10 +212,7 @@
 									<span class="service-popup-text">
 										<span class="row">
 											<span class="col-md-12">
-												Устройство и ремонт мягкой кровли гаражей, производственных зданий, жилых и нежилых помещений. Устройство кровли 
-												из профнастила, металлочерепицы  и шифера .
-
-
+												<p>Устройство и ремонт мягкой кровли гаражей, производственных зданий, жилых и нежилых помещений. Устройство кровли из профнастила, металлочерепицы и шифера.</p>
 											</span>
 										</span>
 									</span>
@@ -244,9 +244,7 @@
 									<span class="service-popup-text">
 										<span class="row">
 											<span class="col-md-12">
-												Монтаж водостоков , монтаж освещения , монтаж металлоконструкций.
-
-
+												<p>Монтаж водостоков, монтаж освещения, монтаж металлоконструкций, антикоррозийная обработка металлоконструкций.</p>
 											</span>
 										</span>
 									</span>
@@ -278,8 +276,7 @@
 									<span class="service-popup-text">
 										<span class="row">
 											<span class="col-md-12">
-												Мойка фасада, мойка окон витражей.
-
+												<p>Мойка фасада, мойка окон витражей.</p>
 											</span>
 										</span>
 									</span>
@@ -311,8 +308,7 @@
 									<span class="service-popup-text">
 										<span class="row">
 											<span class="col-md-12">
-												Штукатурка, шпаклевка, устройство половой и стеновой плитки, гипсакортон, покраска , ламинат, стяжка и др отделочные  работы. 
-
+												<p>Штукатурка, шпаклевка, устройство половой и стеновой плитки, гипсакортон, покраска, ламинат, стяжка и другие отделочные работы.</p>
 											</span>
 										</span>
 									</span>
@@ -344,11 +340,9 @@
 									<span class="service-popup-text">
 										<span class="row">
 											<span class="col-md-12">
-												Металлоконструкции, навесы,  заборы, топчаны, ворота,
-												Изготовления продовольственных помещении ,Изготовление помещений из 
-												контейнера  любой сложности. Сварочные работы любой сложности с выездом.
-
-
+												<p>Металлоконструкции, навесы, заборы, топчаны, ворота,
+												изготовления продовольственных помещений, изготовление помещений из 
+												контейнера любой сложности. Сварочные работы любой сложности с выездом.</p>
 											</span>
 										</span>
 									</span>
@@ -389,7 +383,36 @@
 		</div>
 	</section>
 
-	<section class="testim">
+	<section class="cert">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-12">
+					<h2>Сертификаты</h2>
+				</div>
+			</div>
+			<div class="row">
+				<div class="owl-carousel owl-cert gallery">
+					<div>
+						<div class="item"><a href="img/cert/cert1.jpg"><img src="img/cert/cert1.jpg" alt="Alt"></a></div>
+					</div>
+					<div>
+						<div class="item"><a href="img/cert/cert2.jpg"><img src="img/cert/cert2.jpg" alt="Alt"></a></div>
+					</div>
+					<div>
+						<div class="item"><a href="img/cert/cert3.jpg"><img src="img/cert/cert3.jpg" alt="Alt"></a></div>
+					</div>
+					<div>
+						<div class="item"><a href="img/cert/cert4.jpg"><img src="img/cert/cert4.jpg" alt="Alt"></a></div>
+					</div>
+					<div>
+						<div class="item"><a href="img/cert/cert5.png"><img src="img/cert/cert5.png" alt="Alt"></a></div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<section class="testim hidden">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12">
@@ -452,12 +475,28 @@
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-md-12">
+				<div class="col-sm-4">
+					<h3>Телефоны</h3>
 					<ul>
-						<li><i class="fa fa-phone"></i>0777 00 11 22</li>
-						<li><i class="fa fa-envelope"></i>info@salimal.kg</li>
-						<li><i class="fa fa-map-marker"></i>г.Бишкек ул.Советская 123</li>
+						<li><i class="fa fa-phone"></i>0312 66 02 08</li>
+						<li><i class="fa fa-phone"></i>0771 63 67 10</li>
+						<li><i class="fa fa-phone"></i>0552 06 01 68</li>
 					</ul>
+				</div>
+				<div class="col-sm-4">
+					<h3>Адрес</h3>
+					<ul>
+						<li><i class="fa fa-envelope"></i>info@salimal.kg</li>
+						<li><i class="fa fa-map"></i>г.Бишкек ул. Панфилова 183</li>
+					</ul>
+				</div>
+				<div class="col-sm-4">
+					<h3>Оставить заявку</h3>
+					<form id="footer">
+						<input type="text" class="form-control" name="name" placeholder="Ваше имя" required>
+						<input type="tel" class="form-control" name="phone" placeholder="Ваш телефон" required>
+						<button class="send">Отправить</button>
+					</form>
 				</div>
 			</div>
 		</div>
@@ -465,7 +504,7 @@
 		<div class="container-fluid">
 			<div class="map">
 				<div class="row">
-					<a class="dg-widget-link" href="http://2gis.kg/bishkek/firm/70000001019367295/center/74.61572885513307,42.87344808444721/zoom/16?utm_medium=widget-source&utm_campaign=firmsonmap&utm_source=bigMap">Посмотреть на карте Бишкека</a><div class="dg-widget-link"><a href="http://2gis.kg/bishkek/firm/70000001019367295/photos/70000001019367295/center/74.61572885513307,42.87344808444721/zoom/17?utm_medium=widget-source&utm_campaign=firmsonmap&utm_source=photos">Фотографии компании</a></div><div class="dg-widget-link"><a href="http://2gis.kg/bishkek/center/74.614514,42.875855/zoom/16/routeTab/rsType/bus/to/74.614514,42.875855╎ЦУМ Айчурек, торговый центр?utm_medium=widget-source&utm_campaign=firmsonmap&utm_source=route">Найти проезд до ЦУМ Айчурек, торговый центр</a></div><script charset="utf-8" src="https://widgets.2gis.com/js/DGWidgetLoader.js"></script><script charset="utf-8">new DGWidgetLoader({"width":640,"height":600,"borderColor":"#a3a3a3","pos":{"lat":42.87344808444721,"lon":74.61572885513307,"zoom":16},"opt":{"city":"bishkek"},"org":[{"id":"70000001019367295"}]});</script><noscript style="color:#c00;font-size:16px;font-weight:bold;">Виджет карты использует JavaScript. Включите его в настройках вашего браузера.</noscript>
+					<iframe src="https://yandex.ru/map-widget/v1/-/CBeniZVV8D" width="560" height="400" frameborder="0"></iframe>
 				</div>
 			</div>
 		</div>
@@ -474,19 +513,40 @@
 	<footer>
 		<div class="container">
 			<div class="row">
-				<div class="col-sm-6">
+				<div class="col-md-12">
 					<p>Все права защищены &copy; 2018</p>
-				</div>
-				<div class="col-sm-6 soc">
-					<ul>
-						<li></li>
-					</ul>
 				</div>
 			</div>
 		</div>
 	</footer>
 
 	<div class="top" title="Наверх"><i class="fa fa-angle-double-up"></i></div>
+
+	<div class="hidden">
+		
+		<form id="callback" class="contact-form form-callback">
+
+			<div class="success">
+				<img src="img/logo.png" alt="Logo">
+				<h4>Спасибо за вашу заявку!</h4>
+				<p>Аппак-Консалтинг выражает вам благодарность за оставленную заявку!</p>
+			</div>
+
+			<div class="contact-form-head">
+				<h4>Оставить заявку</h4>
+				<p>Оставьте заявку и мы с вами скоро свяжемся.</p>
+			</div>
+				<input type="text" name="name" class="form-control" placeholder="Ваше имя...">
+				<input type="text" name="phone" class="form-control" placeholder="Ваш телефон..." required>
+			
+
+			<div class="text-center">
+				<button class="send">Отправить</button>
+			</div>
+
+		</form>
+
+	</div>
 	
 	<link rel="stylesheet" href="css/main.min.css">
 	<script src="js/scripts.min.js"></script>
