--- a/salimal/index.html
+++ b/salimal/index.html
@@ -393,19 +393,19 @@
 			<div class="row">
 				<div class="owl-carousel owl-cert gallery">
 					<div>
-						<div class="item"><a href="img/cert/cert1.jpg"><img src="img/cert/cert1.jpg" alt="Alt"></a></div>
+						<div class="item"><a href="img/cert/cert1.jpg"><img src="" data-src="img/cert/cert1.jpg" alt="Alt"></a></div>
 					</div>
 					<div>
-						<div class="item"><a href="img/cert/cert2.jpg"><img src="img/cert/cert2.jpg" alt="Alt"></a></div>
+						<div class="item"><a href="img/cert/cert2.jpg"><img src="" data-src="img/cert/cert2.jpg" alt="Alt"></a></div>
 					</div>
 					<div>
-						<div class="item"><a href="img/cert/cert3.jpg"><img src="img/cert/cert3.jpg" alt="Alt"></a></div>
+						<div class="item"><a href="img/cert/cert3.jpg"><img src="" data-src="img/cert/cert3.jpg" alt="Alt"></a></div>
 					</div>
 					<div>
-						<div class="item"><a href="img/cert/cert4.jpg"><img src="img/cert/cert4.jpg" alt="Alt"></a></div>
+						<div class="item"><a href="img/cert/cert4.jpg"><img src="" data-src="img/cert/cert4.jpg" alt="Alt"></a></div>
 					</div>
 					<div>
-						<div class="item"><a href="img/cert/cert5.png"><img src="img/cert/cert5.png" alt="Alt"></a></div>
+						<div class="item"><a href="img/cert/cert5.png"><img src="" data-src="img/cert/cert5.png" alt="Alt"></a></div>
 					</div>
 				</div>
 			</div>
