--- a/salimal/works.html
+++ b/salimal/works.html
@@ -108,77 +108,74 @@
 			</div>
 			<div class="row">
 				<div class="masonry-container gallery">
-					<div class="col-sm-3 item">
+					<div class="col-md-3 col-sm-4 col-xs-12 item">
 						<a href="img/works/cont.jpg"><img src="" data-src="img/works/cont.jpg" alt="Alt"></a>
 					</div>
-					<div class="col-sm-3 item">
+					<div class="col-md-3 col-sm-4 col-xs-12 item">
 						<a href="img/works/fasad2.jpg"><img src="" data-src="img/works/fasad2.jpg" alt="Alt"></a>
 					</div>
-					<div class="col-sm-3 item">
-						<a href="img/works/fasad1.gif"><img src="" data-src="img/works/fasad1.gif" alt="Alt"></a>
-					</div>
-					<div class="col-sm-3 item">
+					<div class="col-md-3 col-sm-4 col-xs-12 item">
 						<a href="img/works/fasad3.jpg"><img src="img/works/fasad3.jpg" alt="Alt"></a>
 					</div>
-					<div class="col-sm-3 item">
+					<div class="col-md-3 col-sm-4 col-xs-12 item">
 						<a href="img/works/germet.jpg"><img src="img/works/germet.jpg" alt="Alt"></a>
 					</div>
-					<div class="col-sm-3 item">
+					<div class="col-md-3 col-sm-4 col-xs-12 item">
 						<a href="img/works/krov1.jpg"><img src="img/works/krov1.jpg" alt="Alt"></a>
 					</div>
-					<div class="col-sm-3 item">
+					<div class="col-md-3 col-sm-4 col-xs-12 item">
 						<a href="img/works/krov2.jpg"><img src="img/works/krov2.jpg" alt="Alt"></a>
 					</div>
-					<div class="col-sm-3 item">
+					<div class="col-md-3 col-sm-4 col-xs-12 item">
 						<a href="img/works/krovlya1.jpg"><img src="img/works/krovlya1.jpg" alt="Alt"></a>
 					</div>
-					<div class="col-sm-3 item">
+					<div class="col-md-3 col-sm-4 col-xs-12 item">
 						<a href="img/works/krovlya2.jpg"><img src="img/works/krovlya2.jpg" alt="Alt"></a>
 					</div>
-					<div class="col-sm-3 item">
+					<div class="col-md-3 col-sm-4 col-xs-12 item">
 						<a href="img/works/montaj1.jpg"><img src="img/works/montaj1.jpg" alt="Alt"></a>
 					</div>
-					<div class="col-sm-3 item">
+					<div class="col-md-3 col-sm-4 col-xs-12 item">
 						<a href="img/works/montaj2.jpg"><img src="img/works/montaj2.jpg" alt="Alt"></a>
 					</div>
-					<div class="col-sm-3 item">
+					<div class="col-md-3 col-sm-4 col-xs-12 item">
 						<a href="img/works/moy1.jpg"><img src="img/works/moy1.jpg" alt="Alt"></a>
 					</div>
-					<div class="col-sm-3 item">
+					<div class="col-md-3 col-sm-4 col-xs-12 item">
 						<a href="img/works/moy2.jpg"><img src="img/works/moy2.jpg" alt="Alt"></a>
 					</div>
 					
-					<div class="col-sm-3 item">
+					<div class="col-md-3 col-sm-4 col-xs-12 item">
 						<a href="img/works/otdel1.jpg"><img src="img/works/otdel1.jpg" alt="Alt"></a>
 					</div>
-					<div class="col-sm-3 item">
+					<div class="col-md-3 col-sm-4 col-xs-12 item">
 						<a href="img/works/otdel3.jpg"><img src="img/works/otdel3.jpg" alt="Alt"></a>
 					</div>
-					<div class="col-sm-3 item">
+					<div class="col-md-3 col-sm-4 col-xs-12 item">
 						<a href="img/works/otdel4.jpg"><img src="img/works/otdel4.jpg" alt="Alt"></a>
 					</div>
-					<div class="col-sm-3 item">
+					<div class="col-md-3 col-sm-4 col-xs-12 item">
 						<a href="img/works/prod.jpg"><img src="img/works/prod.jpg" alt="Alt"></a>
 					</div>
-					<div class="col-sm-3 item">
+					<div class="col-md-3 col-sm-4 col-xs-12 item">
 						<a href="img/works/prod1.jpg"><img src="img/works/prod1.jpg" alt="Alt"></a>
 					</div>
-					<div class="col-sm-3 item">
+					<div class="col-md-3 col-sm-4 col-xs-12 item">
 						<a href="img/works/svar1.jpg"><img src="img/works/svar1.jpg" alt="Alt"></a>
 					</div>
-					<div class="col-sm-3 item">
+					<div class="col-md-3 col-sm-4 col-xs-12 item">
 						<a href="img/works/svar2.jpg"><img src="img/works/svar2.jpg" alt="Alt"></a>
 					</div>
-					<div class="col-sm-3 item">
+					<div class="col-md-3 col-sm-4 col-xs-12 item">
 						<a href="img/works/svar3.jpg"><img src="img/works/svar3.jpg" alt="Alt"></a>
 					</div>
-					<div class="col-sm-3 item">
+					<div class="col-md-3 col-sm-4 col-xs-12 item">
 						<a href="img/works/svar4.jpg"><img src="img/works/svar4.jpg" alt="Alt"></a>
 					</div>
-					<div class="col-sm-3 item">
+					<div class="col-md-3 col-sm-4 col-xs-12 item">
 						<a href="img/works/svar5.jpg"><img src="img/works/svar5.jpg" alt="Alt"></a>
 					</div>
-					<div class="col-sm-3 item">
+					<div class="col-md-3 col-sm-4 col-xs-12 item">
 						<a href="img/works/svar6.jpg"><img src="img/works/svar6.jpg" alt="Alt"></a>
 					</div>
 				</div>
