--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
 
 	<meta charset="utf-8">
 
-	<title>Tim Djol</title>
-	<meta name="description" content="">
+	<title>Разработка сайтов (landing, сайты-визитки, интернет-магазины, каталоги, блоги, промо-страницы)</title>
+	<meta name="description" content="Создание сайтов (landing, сайты-визитки, интернет-магазины, каталоги, блоги, промо-страницы), создание дизайна сайта, редизайн сайта, тех обслуживание сайта, оптимизация сайта, регистрация домена и хостинга.
+В бонусы входят: кроссбраузерность, адаптивность, скорость загрузки.">
 
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
