--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<title>Разработка сайтов(landing, сайты-визитки, интернет-магазины, каталоги, блоги)</title>
 	<meta name="description" content="Создание сайтов(landing, сайты-визитки, интернет-магазины, каталоги, блоги, промо-страницы), создание дизайна сайта, редизайн сайта, тех обслуживание сайта, оптимизация сайта, регистрация домена и хостинга.
 ">
+	<meta name="keywords" content="создание сайтов в Бишкеке, создание сайтов в Оше, лендинги, визитки, интернет-магазины, каталоги, блоги, промо-страницы" />
 
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
