--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 
 	<meta charset="utf-8">
 
-	<title>Разработка сайтов(landing, сайты-визитки, интернет-магазины, каталоги, блоги)</title>
-	<meta name="description" content="Создание сайтов(landing, сайты-визитки, интернет-магазины, каталоги, блоги, промо-страницы), создание дизайна сайта, редизайн сайта, тех обслуживание сайта, оптимизация сайта, регистрация домена и хостинга.
+	<title>Разработка сайтов (landing, визитки, интернет-магазины, каталоги)</title>
+	<meta name="description" content="Создание сайтов(landing, визитки, интернет-магазины, каталоги, блоги, промо-страницы), создание дизайна сайта, оптимизация сайта, тех обслуживание сайта.">
 ">
 	<meta name="keywords" content="создание сайтов в Бишкеке, создание сайтов в Оше, лендинги, визитки, интернет-магазины, каталоги, блоги, промо-страницы" />
 
