--- a/index.html
+++ b/index.html
@@ -6,9 +6,18 @@
 	<meta charset="utf-8">
 
 	<title>Разработка сайтов (landing, визитки, интернет-магазины, каталоги)</title>
-	<meta name="description" content="Создание сайтов(landing, визитки, интернет-магазины, каталоги, блоги, промо-страницы), создание дизайна сайта, оптимизация сайта, тех обслуживание сайта.">
-
+	<meta name="description" content="Создание сайтов в Бишкеке(landing, визитки, интернет-магазины, каталоги, блоги, промо-страницы), оптимизация сайта, тех обслуживание сайта.">
 	<meta name="keywords" content="создание сайтов в Бишкеке, создание сайтов в Оше, лендинги, визитки, интернет-магазины, каталоги, блоги, промо-страницы" />
+	
+	<meta name="DC.title" content="Разработка сайтов (landing, визитки, интернет-магазины, каталоги)" />
+	<meta name="DC.creator" content="Джолдошев Темирлан" />
+	<meta name="DC.creator.name" content="Джолдошев Темирлан" />
+	<meta name="DC.subject" content="создание сайтов в Бишкеке, создание сайтов в Оше, лендинги, визитки, интернет-магазины, каталоги, блоги, промо-страницы" />
+	<meta name="DC.description" content="Создание сайтов в Бишкеке(landing, визитки, интернет-магазины, каталоги, блоги, промо-страницы), оптимизация сайта, тех обслуживание сайта." />
+	<meta name="DC.type" content="Text" />
+	<meta name="DC.format" content="text/html" />
+	<meta name="DC.language" content="ru-RU" />
+	<meta name="DC.coverage" content="World" />
 
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -892,7 +901,7 @@
 	        } else { f(); }
 	    })(document, window, "yandex_metrika_callbacks");
 	</script>
-	<noscript><div><img src="https://mc.yandex.ru/watch/47584411" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+	<noscript><div><img src="https://mc.yandex.ru/watch/47584411" style="position:absolute; left:-9999px;" alt="Yandex" /></div></noscript>
 	<!-- /Yandex.Metrika counter -->
 
 </body>
