--- a/index.html
+++ b/index.html
@@ -904,5 +904,16 @@
 	<noscript><div><img src="https://mc.yandex.ru/watch/47584411" style="position:absolute; left:-9999px;" alt="Yandex" /></div></noscript>
 	<!-- /Yandex.Metrika counter -->
 
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-114357248-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-114357248-1');
+</script>
+
+
 </body>
 </html>
