--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 		<a href="#about" class="scroll-mouse"></a>
 	</header>
 
-	<section id="about" class="about">
+	<section id="about" class="about"/>
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12 text-center title">
