--- a/index.html
+++ b/index.html
@@ -213,9 +213,50 @@
 							<li class="filter" data-filter=".category-1">Интернет-магазин</li>
 							<li class="filter" data-filter=".category-2">Бизнес-сайт</li>
 							<li class="filter" data-filter=".category-3">Лендинг</li>
+							<li class="filter" data-filter=".category-4">Каталог</li>
 						</ul>
 					</div>
 					<div id="portfolio_grid">
+
+						<div class="mix col-md-3 col-sm-6 col-xs-12 portfolio_item category-4">
+							<img src="" alt="Salimal" data-src="img/portfolio-images/salimal.jpg"/>
+							<div class="port_item_cont">
+								<h3>Salimal</h3>
+								<p>Описание работы</p>
+								<a href="#" class="popup_content">Посмотреть</a>
+							</div>
+							<div class="hidden">
+								<div class="podrt_descr">
+									<div class="modal-box-content">
+										<button class="mfp-close" type="button" title="Закрыть (Esc)">×</button>
+										<h3>Salimal</h3>
+										<p>Сайт разработан вместе с Twins.kg ОсОО "Салимал" выполняет высотные работы и работы в области промышленного альпинизма - ремонт, отделку, покраску фасадов, герметизацию швов, покраска металлоконструкций, высотные монтажные работы.</p>
+										<a href="http://salimal.kg" target="_blank">Перейти на сайт</a>
+										<img scr="" data-src="img/portfolio-images/salimal1.jpg" alt="Oss" />
+									</div>
+								</div>
+							</div>
+						</div>
+
+						<div class="mix col-md-3 col-sm-6 col-xs-12 portfolio_item category-2">
+							<img src="" alt="Salimal" data-src="img/portfolio-images/oss.jpg"/>
+							<div class="port_item_cont">
+								<h3>OSS</h3>
+								<p>Описание работы</p>
+								<a href="#" class="popup_content">Посмотреть</a>
+							</div>
+							<div class="hidden">
+								<div class="podrt_descr">
+									<div class="modal-box-content">
+										<button class="mfp-close" type="button" title="Закрыть (Esc)">×</button>
+										<h3>OSS</h3>
+										<p>Сайт разработан вместе с DevForge Компания Operation Software Solutions — эксперт в области автоматизации бизнеса.</p>
+										<a href="http://oss.kz" target="_blank">Перейти на сайт</a>
+										<img scr="" data-src="img/portfolio-images/oss1.jpg" alt="Oss" />
+									</div>
+								</div>
+							</div>
+						</div>
 
 						<div class="mix col-md-3 col-sm-6 col-xs-12 portfolio_item category-2">
 							<img src="" alt="Appak" data-src="img/portfolio-images/appak.jpg"/>
@@ -237,7 +278,7 @@
 							</div>
 						</div>
 
-						<div class="mix col-md-3 col-sm-6 col-xs-12 portfolio_item category-2">
+						<div class="mix col-md-3 col-sm-6 col-xs-12 portfolio_item category-4">
 							<img src="" alt="Brass" data-src="img/portfolio-images/brass.jpg"/>
 							<div class="port_item_cont">
 								<h3>Brass</h3>
@@ -318,6 +359,46 @@
 						</div>
 
 						<div class="mix col-md-3 col-sm-6 col-xs-12 portfolio_item category-2">
+						<img src="" data-src="img/portfolio-images/mfoshu.jpg" alt="Mfoshu" />
+						<div class="port_item_cont">
+							<h3>МФО-ШУ</h3>
+							<p>Описание работы</p>
+							<a href="#" class="popup_content">Посмотреть</a>
+						</div>
+						<div class="hidden">
+							<div class="podrt_descr">
+								<div class="modal-box-content">
+									<button class="mfp-close" type="button" title="Закрыть (Esc)">×</button>
+									<h3>МФО-ШУ</h3>
+									<p>Сайт разработан вместе с Twins.kg МФО «ШУ» является сельско-ориентированной организацией, выдает кредиты на развитие малого и среднего бизнеса, преимущественно на разведение мелкого и крупного скота.</p>
+									<a href="http://mfo-shu.kz" target="_blank">Перейти на сайт</a>
+									<img src="" data-src="img/portfolio-images/mfoshu1.jpg" alt="Mfoshu" />
+								</div>
+							</div>
+						</div>
+					</div>
+
+						<div class="mix col-md-3 col-sm-6 col-xs-12 portfolio_item category-2">
+						<img src="" data-src="img/portfolio-images/starinvest.jpg" alt="Starinvest" />
+						<div class="port_item_cont">
+							<h3>StarInvest</h3>
+							<p>Описание работы</p>
+							<a href="#" class="popup_content">Посмотреть</a>
+						</div>
+						<div class="hidden">
+							<div class="podrt_descr">
+								<div class="modal-box-content">
+									<button class="mfp-close" type="button" title="Закрыть (Esc)">×</button>
+									<h3>StarInvest</h3>
+									<p>Сайт разработан вместе с Twins.kg Компания занимается трудоустройством людей в странах Ближнего Востока, в Турции, в Канаде.</p>
+									<a href="http://starinvest.kg" target="_blank">Перейти на сайт</a>
+									<img src="" data-src="img/portfolio-images/starinvest1.jpg" alt="Starinvest" />
+								</div>
+							</div>
+						</div>
+					</div>
+
+						<div class="mix col-md-3 col-sm-6 col-xs-12 portfolio_item category-2">
 							<img src="" data-src="img/portfolio-images/asia.jpg" alt="AsiaTravel" />
 							<div class="port_item_cont">
 								<h3>AsiaTravel</h3>
@@ -332,6 +413,66 @@
 										<p>Asia Travel - компания, которая занимается трудоустройством граждан в Турции, ОАЭ, Германии. Была задача разработать информативный сайт для компании. Реализована отправка анкеты посетителя, формы заявок.</p>
 										<a href="http://asiatravel.kg" target="_blank">Перейти на сайт</a>
 										<img src="" data-src="img/portfolio-images/asiatravel1.jpg" alt="AsiaTravel" />
+									</div>
+								</div>
+							</div>
+						</div>
+
+						<div class="mix col-md-3 col-sm-6 col-xs-12 portfolio_item category-3">
+						<img src="" data-src="img/portfolio-images/mpa.jpg" alt="Mpa" />
+						<div class="port_item_cont">
+							<h3>МПА</h3>
+							<p>Описание работы</p>
+							<a href="#" class="popup_content">Посмотреть</a>
+						</div>
+						<div class="hidden">
+							<div class="podrt_descr">
+								<div class="modal-box-content">
+									<button class="mfp-close" type="button" title="Закрыть (Esc)">×</button>
+									<h3>МПА</h3>
+									<p>Сайт разработан вместе с Twins.kg На сегодняшний день Фирма МПА - одна из ведущих компаний в области поставок и реализации ГСМ, имеющая филиалы и АЗС в регионах Кыргызской Республики, и партнеров за ее пределами. </p>
+									<a href="http://mpa.kg" target="_blank">Перейти на сайт</a>
+									<img src="" data-src="img/portfolio-images/mpa1.jpg" alt="Mpa" />
+								</div>
+							</div>
+						</div>
+					</div>
+
+						<div class="mix col-md-3 col-sm-6 col-xs-12 portfolio_item category-2">
+						<img src="" data-src="img/portfolio-images/amfi.jpg" alt="Amfi" />
+						<div class="port_item_cont">
+							<h3>Amfi</h3>
+							<p>Описание работы</p>
+							<a href="#" class="popup_content">Посмотреть</a>
+						</div>
+						<div class="hidden">
+							<div class="podrt_descr">
+								<div class="modal-box-content">
+									<button class="mfp-close" type="button" title="Закрыть (Esc)">×</button>
+									<h3>Amfi</h3>
+									<p>Сайт разработан вместе с Twins.kg для АМФО, которая координирует вопросы взаимодействия членов с государственными органами ,в особенности с Национальным Банком Кыргызской, который регулирует сектор финансовых услуг, предоставляет возможность коллегам выработать совместные решения задач обеспечивает обмен информации.</p>
+									<a href="http://amfi.kg" target="_blank">Перейти на сайт</a>
+									<img src="" data-src="img/portfolio-images/amfi1.jpg" alt="Amfi" />
+								</div>
+							</div>
+						</div>
+					</div>
+
+					<div class="mix col-md-3 col-sm-6 col-xs-12 portfolio_item category-1">
+							<img src="" data-src="img/portfolio-images/zakup.jpg" alt="Zakup" />
+							<div class="port_item_cont">
+								<h3>Zakuponline</h3>
+								<p>Описание работы</p>
+								<a href="#" class="popup_content">Посмотреть</a>
+							</div>
+							<div class="hidden">
+								<div class="podrt_descr">
+									<div class="modal-box-content">
+										<button class="mfp-close" type="button" title="Закрыть (Esc)">×</button>
+										<h3>Zakuponline</h3>
+										<p>Впервые в Кыргызстане закуп онлайн стал реальностью! Мы тщательно выбираем товар, чтобы предложить Вам действительно лучшее.</p>
+										<a href="https://zakuponline.kg" target="_blank">Перейти на сайт</a>
+										<img src="" data-src="img/portfolio-images/zakup1.jpg" alt="Zakup" />
 									</div>
 								</div>
 							</div>
@@ -618,7 +759,7 @@
 							</div>
 						</div>
 
-						<div class="mix col-md-3 col-sm-6 col-xs-12 portfolio_item category-2">
+						<div class="mix col-md-3 col-sm-6 col-xs-12 portfolio_item category-4">
 							<img src="" data-src="img/portfolio-images/versal.jpg" alt="Versal" />
 							<div class="port_item_cont">
 								<h3>Versal</h3>
@@ -638,7 +779,47 @@
 							</div>
 						</div>
 
+						<div class="mix col-md-3 col-sm-6 col-xs-12 portfolio_item category-4">
+							<img src="" data-src="img/portfolio-images/japan.jpg" alt="Japan" />
+							<div class="port_item_cont">
+								<h3>JapanWorld</h3>
+								<p>Описание работы</p>
+								<a href="#" class="popup_content">Посмотреть</a>
+							</div>
+							<div class="hidden">
+								<div class="podrt_descr">
+									<div class="modal-box-content">
+										<button class="mfp-close" type="button" title="Закрыть (Esc)">×</button>
+										<h3>JapanWorld</h3>
+										<p>Одежда из Японии!</p>
+										<a href="http://japanworld.kg" target="_blank">Перейти на сайт</a>
+										<img src="" data-src="img/portfolio-images/japan1.jpg" alt="Japan" />
+									</div>
+								</div>
+							</div>
+						</div>
+
 						<div class="mix col-md-3 col-sm-6 col-xs-12 portfolio_item category-2">
+							<img src="" data-src="img/portfolio-images/sem.jpg" alt="Sem" />
+							<div class="port_item_cont">
+								<h3>Sem</h3>
+								<p>Описание работы</p>
+								<a href="#" class="popup_content">Посмотреть</a>
+							</div>
+							<div class="hidden">
+								<div class="podrt_descr">
+									<div class="modal-box-content">
+										<button class="mfp-close" type="button" title="Закрыть (Esc)">×</button>
+										<h3>Sem</h3>
+										<p>Стоматологическая клиника «СЭМ» в Бишкеке – это более 12 лет успешной работы по оказанию стоматологических услуг, профессиональный подход врачей – стоматологов к пациентам, безболезненное лечение, удобное расположение клиники.</p>
+										<a href="http://sem.kg" target="_blank">Перейти на сайт</a>
+										<img src="" data-src="img/portfolio-images/sem1.jpg" alt="Sem" />
+									</div>
+								</div>
+							</div>
+						</div>
+
+						<div class="mix col-md-3 col-sm-6 col-xs-12 portfolio_item category-4">
 							<img src="" data-src="img/portfolio-images/krono.jpg" alt="Krono" />
 							<div class="port_item_cont">
 								<h3>Krono</h3>
