--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
 
 </head>
 
-<body>
+<body oncontextmenu="return false" oncopy="return false;" oncontextmenu="return false" onselectstart="return false;">
+
 	<span itemscope itemtype="http://schema.org/LocalBusiness"/>
 		<header>
 			<div class="container-fluid">
