--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
 </head>
 
-<body oncontextmenu="return false" oncopy="return false;" oncontextmenu="return false" onselectstart="return false;">
+<body oncontextmenu="return false" oncopy="return false;" onselectstart="return false;">
 
 	<span itemscope itemtype="http://schema.org/LocalBusiness"/>
 		<header>
@@ -73,8 +73,8 @@
 
 								</div>
 								<div class="phone">
-									<i class="fa fa-phone"></i><span itemprop="telephone">+996 771 00 21 71</span>
-									<a href="#callback">Заказать звонок</a>
+									<i class="fa fa-phone"></i><span itemprop="telephone"><a href="tel:+996771002171">+996 771 00 21 71</span>
+									<div class="call"><a href="#callback">Заказать звонок</a></div>
 								</div>
 							</div>
 						</div>
@@ -117,7 +117,7 @@
 					<ul>
 						<li>Профессиональное создание сайтов: разработка дизайна, разработка проектов на PHP, JS, адаптивная верстка с использованием CSS Framework Twitter Bootstrap, посадка на CMS WordPress, OpenCart2, Bitrix, ModX. Сборка проектов на gulp с использованием препроцессора SASS/LESS и сохранения контроля версий git</li>
 						<li>День рождения: 2 июля 1992 года</li>
-						<li>Номер телефона: +996 771 00 21 71</li>
+						<li>Номер телефона: <a href="tel:+996771002171">+996 771 00 21 71</a></li>
 						<li>E-mail: <a href="mailto:tdjol007@gmail.com">tdjol007@gmail.com</a></li>
 						<li>Веб-сайт: <a href="https://timdjol.github.io" target="_blank">timdjol.github.io</a></li>
 					</ul>
@@ -904,7 +904,7 @@
 						<div class="contact_box">
 							<div class="contacts_icon icon-basic-smartphone"></div>
 							<h3>Телефон:</h3>
-							<p>+996 771 00 21 71</p>
+							<p><a href="tel:+996771002171">+996 771 00 21 71</p>
 						</div>
 						<div class="contact_box">
 							<div class="contacts_icon icon-basic-mail"></div>
