--- a/index.html
+++ b/index.html
@@ -123,10 +123,11 @@
 					</ul>
 					<div class="social_wrap">
 						<ul>
-							<li><a href="https://www.linkedin.com/in/tim-djol-4524ba115/" target="_blank"><i class="fa fa-linkedin"></i></a></li>
-							<li><a href="https://vk.com/timdjol" target="_blank"><i class="fa fa-vk"></i></a></li>
 							<li><a href="https://www.facebook.com/tim.djol" target="_blank"><i class="fa fa-facebook"></i></a></li>
-							<li><a href="https://github.com/TimDjol" target="_blank"><i class="fa fa-github"></i></a></li>
+							<li><a href="http://telegram.me/@timdjol" target="_blank"><i class="fa fa-telegram"></i></a></li>
+							<li><a href="https://api.whatsapp.com/send?phone=996771002171" target="_blank"><i class="fa fa-whatsapp"></i></a></li>
+							<li><a href="skype:dominus_timdjol?chat" target="_blank"><i class="fa fa-skype"></i></a></li>
+							<li><a href="https://vk.com/timdjol" target="_blank"><i class="fa fa-vk"></i></a></li>
 						</ul>
 					</div>
 				</div>
@@ -943,10 +944,11 @@
 						&copy; 2018 Tim Djol
 						<div class="social_wrap">
 							<ul>
-								<li><a href="https://www.linkedin.com/in/tim-djol-4524ba115/" target="_blank"><i class="fa fa-linkedin"></i></a></li>
-								<li><a href="https://vk.com/timdjol" target="_blank"><i class="fa fa-vk"></i></a></li>
 								<li><a href="https://www.facebook.com/tim.djol" target="_blank"><i class="fa fa-facebook"></i></a></li>
-								<li><a href="https://github.com/TimDjol" target="_blank"><i class="fa fa-github"></i></a></li>
+								<li><a href="http://telegram.me/@timdjol" target="_blank"><i class="fa fa-telegram"></i></a></li>
+								<li><a href="https://api.whatsapp.com/send?phone=996771002171" target="_blank"><i class="fa fa-whatsapp"></i></a></li>
+								<li><a href="skype:dominus_timdjol?chat" target="_blank"><i class="fa fa-skype"></i></a></li>
+								<li><a href="https://vk.com/timdjol" target="_blank"><i class="fa fa-vk"></i></a></li>
 							</ul>
 						</div>
 					</div>
