--- a/index.html
+++ b/index.html
@@ -221,6 +221,26 @@
 					<div id="portfolio_grid">
 
 						<div class="mix col-md-3 col-sm-6 col-xs-12 portfolio_item category-2">
+							<img src="" alt="Zaem" data-src="img/portfolio-images/zaem.jpg"/>
+							<div class="port_item_cont">
+								<h3>Zaem</h3>
+								<p>Описание работы</p>
+								<a href="#" class="popup_content">Посмотреть</a>
+							</div>
+							<div class="hidden">
+								<div class="podrt_descr">
+									<div class="modal-box-content">
+										<button class="mfp-close" type="button" title="Закрыть (Esc)">×</button>
+										<h3>Zaem</h3>
+										<p>Компания предлагает кредитоспособных заемщиков под более низкие процентные ставки, а для инвесторов более высокую прибыль.</p>
+										<a href="http://zaem.kg" target="_blank">Перейти на сайт</a>
+										<img scr="" data-src="img/portfolio-images/zaem1.jpg" alt="Zaem" />
+									</div>
+								</div>
+							</div>
+						</div>
+
+						<div class="mix col-md-3 col-sm-6 col-xs-12 portfolio_item category-2">
 							<img src="" alt="Salimal" data-src="img/portfolio-images/salimal.jpg"/>
 							<div class="port_item_cont">
 								<h3>Salimal</h3>
@@ -234,7 +254,7 @@
 										<h3>Salimal</h3>
 										<p>Сайт разработан вместе с Twins.kg ОсОО "Салимал" выполняет высотные работы и работы в области промышленного альпинизма - ремонт, отделку, покраску фасадов, герметизацию швов, покраска металлоконструкций, высотные монтажные работы.</p>
 										<a href="http://salimal.kg" target="_blank">Перейти на сайт</a>
-										<img scr="" data-src="img/portfolio-images/salimal1.jpg" alt="Oss" />
+										<img scr="" data-src="img/portfolio-images/salimal1.jpg" alt="Salimal" />
 									</div>
 								</div>
 							</div>
