--- a/index.html
+++ b/index.html
@@ -702,6 +702,26 @@
 						</div>
 
 						<div class="mix col-md-3 col-sm-6 col-xs-12 portfolio_item category-2">
+							<img src="" data-src="img/portfolio-images/vesovaya.png" alt="Skinclinic" />
+							<div class="port_item_cont">
+								<h3>Vesovaya</h3>
+								<p>Описание работы</p>
+								<a href="#" class="popup_content">Посмотреть</a>
+							</div>
+							<div class="hidden">
+								<div class="podrt_descr">
+									<div class="modal-box-content">
+										<button class="mfp-close" type="button" title="Закрыть (Esc)">×</button>
+										<h3>Vesovaya</h3>
+										<p>Компания «Весовая» является официальным представителем ТОО «ВЕСОВАЯ» (Казахстан) и выполняет весь спектр работ по изготовлению, модернизации (старых рычаговых весов), монтажу и сервисному обслуживанию электронных автомобильных и железнодорожных весов (от 40 тонн до 200 тонн).</p>
+										<a href="http://vesovaya.kg" target="_blank">Перейти на сайт</a>
+										<img src="" data-src="img/portfolio-images/vesovaya1.png" alt="Skinclinic" />
+									</div>
+								</div>
+							</div>
+						</div>
+
+						<div class="mix col-md-3 col-sm-6 col-xs-12 portfolio_item category-2">
 							<img src="" data-src="img/portfolio-images/skinclinic.jpg" alt="Skinclinic" />
 							<div class="port_item_cont">
 								<h3>Skinclinic</h3>
