--- a/index.html
+++ b/index.html
@@ -221,6 +221,26 @@
 					<div id="portfolio_grid">
 
 						<div class="mix col-md-3 col-sm-6 col-xs-12 portfolio_item category-2">
+							<img src="" alt="Twins" data-src="img/portfolio-images/twins.jpg"/>
+							<div class="port_item_cont">
+								<h3>Twins</h3>
+								<p>Описание работы</p>
+								<a href="#" class="popup_content">Посмотреть</a>
+							</div>
+							<div class="hidden">
+								<div class="podrt_descr">
+									<div class="modal-box-content">
+										<button class="mfp-close" type="button" title="Закрыть (Esc)">×</button>
+										<h3>Twins</h3>
+										<p>Компания «Твинс» - это команда профессионалов в области разработки и создания веб-сайтов, рекламы в Интернете.</p>
+										<a href="http://twins.kg" target="_blank">Перейти на сайт</a>
+										<img scr="" data-src="img/portfolio-images/twins1.jpg" alt="Twins" />
+									</div>
+								</div>
+							</div>
+						</div>
+
+						<div class="mix col-md-3 col-sm-6 col-xs-12 portfolio_item category-2">
 							<img src="" alt="Zaem" data-src="img/portfolio-images/zaem.jpg"/>
 							<div class="port_item_cont">
 								<h3>Zaem</h3>
