--- a/index.html
+++ b/index.html
@@ -221,6 +221,46 @@
 					<div id="portfolio_grid">
 
 						<div class="mix col-md-3 col-sm-6 col-xs-12 portfolio_item category-2">
+							<img src="" alt="Взломов" data-src="img/portfolio-images/vzlomov.jpg"/>
+							<div class="port_item_cont">
+								<h3>Взломов</h3>
+								<p>Описание работы</p>
+								<a href="#" class="popup_content">Посмотреть</a>
+							</div>
+							<div class="hidden">
+								<div class="podrt_descr">
+									<div class="modal-box-content">
+										<button class="mfp-close" type="button" title="Закрыть (Esc)">×</button>
+										<h3>Взломов</h3>
+										<p>Вскрытие авто | ремонт замков зажигания изготовление автомобильных ключей</p>
+										<a href="http://xn--39-dlcayyhpb.xn--p1ai/" target="_blank">Перейти на сайт</a>
+										<img scr="" data-src="img/portfolio-images/vzlomov1.jpg" alt="Взломов" />
+									</div>
+								</div>
+							</div>
+						</div>
+
+						<div class="mix col-md-3 col-sm-6 col-xs-12 portfolio_item category-4">
+							<img src="" alt="Tesgroupservice" data-src="img/portfolio-images/tesgroup.jpg"/>
+							<div class="port_item_cont">
+								<h3>Tesgroupservice</h3>
+								<p>Описание работы</p>
+								<a href="#" class="popup_content">Посмотреть</a>
+							</div>
+							<div class="hidden">
+								<div class="podrt_descr">
+									<div class="modal-box-content">
+										<button class="mfp-close" type="button" title="Закрыть (Esc)">×</button>
+										<h3>Tesgroupservice</h3>
+										<p>Гостеприимный и уютный гостевой дом TES предоставляющий  гостиничные услуги с 2003года,  расположен в одном из древних городов  в Центральной Азии. В средние века древний город  Ош стоял на пересечении дорог Великого Шелкового пути и являлся одним из значимых его пунктов торговли, а также отдыха для караванов после утомительных переходов через поднебесные горы Памира.</p>
+										<a href="http://tesgroupservice.com" target="_blank">Перейти на сайт</a>
+										<img scr="" data-src="img/portfolio-images/tesgroup1.jpg" alt="Tesgroupservice" />
+									</div>
+								</div>
+							</div>
+						</div>
+
+						<div class="mix col-md-3 col-sm-6 col-xs-12 portfolio_item category-2">
 							<img src="" alt="Twins" data-src="img/portfolio-images/twins.jpg"/>
 							<div class="port_item_cont">
 								<h3>Twins</h3>
@@ -275,6 +315,26 @@
 										<p>Сайт разработан вместе с Twins.kg ОсОО "Салимал" выполняет высотные работы и работы в области промышленного альпинизма - ремонт, отделку, покраску фасадов, герметизацию швов, покраска металлоконструкций, высотные монтажные работы.</p>
 										<a href="http://salimal.kg" target="_blank">Перейти на сайт</a>
 										<img scr="" data-src="img/portfolio-images/salimal1.jpg" alt="Salimal" />
+									</div>
+								</div>
+							</div>
+						</div>
+
+						<div class="mix col-md-3 col-sm-6 col-xs-12 portfolio_item category-4">
+							<img src="" alt="Vitrovi" data-src="img/portfolio-images/vitrovi.jpg"/>
+							<div class="port_item_cont">
+								<h3>Vitrovi</h3>
+								<p>Описание работы</p>
+								<a href="#" class="popup_content">Посмотреть</a>
+							</div>
+							<div class="hidden">
+								<div class="podrt_descr">
+									<div class="modal-box-content">
+										<button class="mfp-close" type="button" title="Закрыть (Esc)">×</button>
+										<h3>Vitrovi</h3>
+										<p>Создают художественные витражи для дизайна интерьера в различных техниках: тиффани, английская техника, фацетный, заливной, пескоструй. Каждый витраж – уникальная авторская работа, выполненная художником.</p>
+										<a href="http://vitrovi.kg" target="_blank">Перейти на сайт</a>
+										<img scr="" data-src="img/portfolio-images/vitrovi1.jpg" alt="Vitrovi" />
 									</div>
 								</div>
 							</div>
