--- a/index.html
+++ b/index.html
@@ -1158,5 +1158,13 @@
     },
   }
 </script>
+
+<script>
+var __REPLAIN_ = '16615f5d-1ee3-4cac-9286-ce28d1d57921';
+(function(u){var s=document.createElement('script');s.type='text/javascript';s.async=true;s.src=u;
+var x=document.getElementsByTagName('script')[0];x.parentNode.insertBefore(s,x);
+})('https://widget.replain.cc/dist/client.js');
+</script>
+
 	</body>
 	</html>
