--- a/ontime/index.html
+++ b/ontime/index.html
@@ -330,7 +330,7 @@
 							<h3>Адрес</h3>
 							<div class="address"><i class="fa fa-map-signs" aria-hidden="true"></i>г.Москва ул.Набережная 7/34</div>
 						</div>
-						<div class="col-sm-6">
+						<div class="col-sm-6 phone">
 							<h3>Телефоны</h3>
 							<ul>
 								<li><i class="fa fa-phone"></i>+996 777 00 11 22</li>
